--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: #f7f7f7;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.head_text {
+  @apply text-5xl mt-5 leading-[1.15] sm:text-6xl font-extrabold;
+}
+.title_text {
+  @apply text-3xl mt-5 leading-[1.15] sm:text-6xl font-extrabold;
+}
+
+.purple_gradient {
+  @apply bg-gradient-to-r from-purple-700 via-violet-600 to-blue-500 bg-clip-text text-transparent;
+}
+
+.desc {
+  @apply text-lg text-slate-500;
 }
