--- a/app/globals.css
+++ b/app/globals.css
@@ -20,3 +20,52 @@ body {
 .desc {
   @apply text-lg text-slate-500;
 }
+
+.wrap {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+
+/* @media screen and (min-width: 320px) {
+    .wrap {
+      max-width: 320px;
+      padding: 0 0.5rem;
+    }
+  }
+  @media screen and (min-width: 456px) {
+    .wrap {
+      max-width: 456px;
+      padding: 0 0.5rem;
+    }
+  } */
+@media screen and (min-width: 640px) {
+  .wrap {
+    max-width: 640px;
+    padding: 0 1rem;
+  }
+}
+@media screen and (min-width: 768px) {
+  .wrap {
+    max-width: 768px;
+    padding: 0 1rem;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .wrap {
+    max-width: 1024px;
+    padding: 0 3rem;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .wrap {
+    max-width: 1280px;
+    padding: 0 5rem;
+  }
+}
+@media screen and (min-width: 1536px) {
+  .wrap {
+    max-width: 1536px;
+    padding: 0 18rem;
+  }
+}
